# bbr18-software

./: .eslintrc  .gitignore  package-lock.json  package.json
ai/: ai.js  backoff-delay.js  conf.js  omni-motion.js  public-conf.json  test.js  thrower.js  util.js  websocket-manager.js
calibration/: cal_test.js  calibration.js  measurements.empty.json  measurements.json  measurements_14_11_dunk.json  measurements_14_11_hoop.json  measurements_16_11_dunk.measurements.json  measurements_16_11_dunk.thrower_speed.json  measurements_16_11_hoop.center_offset.json  measurements_16_11_hoop.measurements.json  measurements_16_11_hoop.thrower_speed.json  measurements_20_11_dunk.center_offset.json  measurements_20_11_dunk.competition.json  measurements_20_11_dunk.measurements.json  measurements_20_11_dunk.thrower_speed.json  measurements_20_11_hoop.center_offset.json  measurements_20_11_hoop.competition.json  measurements_20_11_hoop.measurements.json  measurements_20_11_hoop.thrower_speed.json  public-conf.json  simulation.center_offset.json  simulation.thrower_speed.json  test.thrower_speed.json  trainer-by-distance.js  trainer.js  undefined.center_offset.json  undefined.measurements.json  undefined.thrower_speed.json  utils.js
calibration/data/: measurements.2.json  measurements.3.json  measurements.4.json  measurements.original.json  measurements.quiteokay.json  measurements_19_11_dunk.center_offset.json  measurements_19_11_dunk.measurements.json  measurements_19_11_dunk.thrower_speed.json  measurements_19_11_hoop.center_offset.json  measurements_19_11_hoop.measurements.json  measurements_19_11_hoop.thrower_speed.json  simulation.center_offset.json  simulation.measurements.json  simulation.thrower_speed.json  test.center_offset.json
calibration/data/competition-25-11/: straight.json
calibration/data/competition-28-11/: bounce.json  straight.json
calibration/data/competition-29-11/: bounce.json  straight.json
calibration/data/competition-latest/: bounce.json  straight.json
calibration/data/competition-morning/: bounce.json  straight.json
calibration/data/competition-new/: bounce.json  straight.json
common/: HubCom.js
dashboard/: dashboard.js  package-lock.json  package.json
dashboard/public/: index.html  main.js
goal_distance/: goal_distance.py  public-conf.json
hub/: hub-test.js  hub.js  package-lock.json  package.json  public-conf.json
hub/test/: hub.test.js  jest.config.json
hwif/: hwif.js
mainboard/: mainboard.js  public-conf.json
manual-control/: commands.json  manual-control.js  package-lock.json  package.json  ps4-controller.js  public-conf.json  steam-controller.js
recorder/: distance_basket_y2_2018-11-30T18_21_55_214Z.json  distance_basket_y2_2018-11-30T18_25_32_927Z.json  distance_basket_y2_2018-11-30T18_35_45_075Z.json  distance_basket_y2_2018-11-30T19_49_53_754Z.json  distance_basket_y2_2018-11-30T19_54_48_609Z.json  package-lock.json  package.json  public-conf.json  recorder.js
runner/: package-lock.json  package.json  runner.js  start_runner.sh
runner/public/: index.html  main.css  main.js
training/: corrections.json  measurements.empty.json  measurements.json  package-lock.json  package.json  public-conf.json  training.js  utils.js
training/public/: .eslintrc  index.html  main.css  main.js
vision/: .gitignore  CMakeLists.txt  conf.json  main.cpp  main_test.cpp  public-conf.json  pyXiQ.c  readme.md  stdafx.h  udp_test.js
vision/cmake/: FindJPEGTURBO.cmake  FindOpenCL.cmake  FindWebP.cmake
vision/include/: BaseCamera.h  Blobber.h  CameraTranslator.h  Clusterer.h  Config.h  DebugRenderer.h  DisplayWindow.h  Gui.h  HubCom.h  ImageProcessor.h  Maths.h  Object.h  OpenCLCompute.h  Util.h  Vision.h  VisionManager.h  XimeaCamera.h
vision/kernels/: debayer.cl  generate_lookup_table.cl  helper  kmeans.cl
vision/src/: Blobber.cpp  CameraTranslator.cpp  Canvas.cpp  Clusterer.cpp  DebugRenderer.cpp  DisplayWindow.cpp  Gui.cpp  HubCom.cpp  ImageProcessor.cpp  Maths.cpp  Object.cpp  OpenCLCompute.cpp  Util.cpp  Vision.cpp  VisionManager.cpp  XimeaCamera.cpp
vision/xiApi/: m3Identify.h  xiApi.h  xiapi32.lib
(+16 files in other folders)
